--- a/src/theme/text.scss
+++ b/src/theme/text.scss
@@ -1,4 +1,4 @@
-h1, h2, h3, h4, h5, h6  {
+h1, h2, h3, h4, h5, h6, p  {
     margin-block-start: 0em;
     margin-block-end: 0em;
     margin-inline-start: 0px;
@@ -7,8 +7,13 @@ h1, h2, h3, h4, h5, h6  {
 
 h2 {
     font-family: 'noto-bold';
-    font-size: 1.125rem;
-    line-height: 1.318rem;
+    font-size: 2.25rem;
+    line-height: 3.063rem;
+}
+
+h2.variation {
+    font-size: 1.5rem;
+    line-height: 2.043rem;
 }
 
 h5 {
@@ -17,14 +22,24 @@ h5 {
     line-height: 1.172rem;
 }
 
-.text-red{
-    color: var(--third);
+p{
+    font-family: 'noto-regular';
+    font-size: 1.125rem;
+    line-height: 1.533rem;
 }
 
-.text-blue{
+.primary{
     color: var(--primary);
 }
 
-.text-violet{
+.secondary{
     color: var(--secondary);
+}
+
+.third{
+    color: var(--third);
+}
+
+.disabled{
+    color: var(--disabled-text)
 }
