piew-grapihc ok

--- a/src/theme/text.scss
+++ b/src/theme/text.scss
@@ -16,7 +16,7 @@ h2.variation {
     line-height: 2.043rem;
 }
 
-h5 {
+h5,text{
     font-family: 'noto-thin';
     font-size: 1rem;
     line-height: 1.172rem;
