--- a/src/theme/text.scss
+++ b/src/theme/text.scss
@@ -3,6 +3,25 @@ h1, h2, h3, h4, h5, h6, p  {
     margin-block-end: 0em;
     margin-inline-start: 0px;
     margin-inline-end: 0px;
+    &.text-blue{
+        color: var(--primary);
+    }
+    
+    &.text-violet{
+        color: var(--secondary);
+    }
+    
+    &.text-red{
+        color: var(--third);
+    }
+    
+    &.text-disabled{
+        color: var(--disabled-text)
+    }
+}
+
+em{
+    font-style: normal;
 }
 
 h2 {
@@ -26,20 +45,4 @@ p{
     font-family: 'noto-regular';
     font-size: 1.125rem;
     line-height: 1.533rem;
-}
-
-.primary{
-    color: var(--primary);
-}
-
-.secondary{
-    color: var(--secondary);
-}
-
-.third{
-    color: var(--third);
-}
-
-.disabled{
-    color: var(--disabled-text)
 }
