--- a/src/components/circle/Circle.scss
+++ b/src/components/circle/Circle.scss
@@ -21,3 +21,15 @@
 .blue{
     background-color: var(--primary);
 }
+
+.red-medium{
+    background-color: var(--third-light);
+}
+
+.violet-medium{
+    background-color: var(--secondary-light);
+}
+
+.blue-medium{
+    background-color: var(--primary-light);
+}
