--- a/src/components/circle/Circle.scss
+++ b/src/components/circle/Circle.scss
@@ -1,4 +1,8 @@
 .circle{
+    &.xl{
+        height: 6.875rem;
+        width: 6.875rem;
+    }
     &.sm{
         height: 1.563rem;
         width: 1.563rem;
