--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -6,4 +6,22 @@
     .one{
         margin-right: auto;
     }
+    .graficas-rectangulares{
+        display: flex;
+        flex-direction: row;
+        margin-top: 40px;
+        .grafica-uno{
+            width: min-content;
+            border: 1px solid var(--secondary-light);
+            box-shadow: 0px 0px 8px var(--secondary-light);
+            box-sizing: border-box;
+            border-radius: 1.5rem;
+            margin: 0 auto;
+            .margin-bo{
+                text-align: center;
+                margin-bottom: 10px;
+                margin-top: 15px;
+            }
+        }
+    }
 }
